docs: clarify range endpoint
